--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-dark px-4" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Participantes</a>
 								<ul class="dropdown-menu" aria-labelledby="dropdown03">
-									<li><a class="dropdown-item" href="#dummy">Caroline Machado da Silva</a></li>
+									<li><a class="dropdown-item" href="#dummy">Caroline M. da Silva</a></li>
 									<li><a class="dropdown-item" href="#dummy">Francieli Celeghim</a></li>
 									<li><a class="dropdown-item" href="#dummy">Marcelo Ramos</a></li>
-									<li><a class="dropdown-item" href="#dummy">Mateus Benites Dias</a></li>
-									<li><a class="dropdown-item" href="#dummy">Ronaldo Fonseca Junior</a></li>
-									<li><a class="dropdown-item" href="#dummy">Wesley Bueno Mantuani Alves</a></li>
+									<li><a class="dropdown-item" href="#dummy">Mateus B. Dias</a></li>
+									<li><a class="dropdown-item" href="#dummy">Ronaldo F. Junior</a></li>
+									<li><a class="dropdown-item" href="#dummy">Wesley B. M. Alves</a></li>
 								</ul>
 							</li>
 							<!-- <li class="nav-item dropdown">
