--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-dark px-4" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Participantes</a>
 								<ul class="dropdown-menu" aria-labelledby="dropdown03">
-									<li><a class="dropdown-item" href="#dummy">Caroline M. da Silva</a></li>
-									<li><a class="dropdown-item" href="#dummy">Francieli Celeghim</a></li>
-									<li><a class="dropdown-item" href="#dummy">Marcelo Ramos</a></li>
-									<li><a class="dropdown-item" href="#dummy">Mateus B. Dias</a></li>
-									<li><a class="dropdown-item" href="#dummy">Ronaldo F. Junior</a></li>
-									<li><a class="dropdown-item" href="#dummy">Wesley B. M. Alves</a></li>
+									<li><a class="dropdown-item" href="https://github.com/smlorac" target="_blank">Caroline M. da Silva</a></li>
+									<li><a class="dropdown-item" href="https://github.com/francieli-celeghim" target="_blank">Francieli Celeghim</a></li>
+									<li><a class="dropdown-item" href="https://github.com/rows15" target="_blank">Marcelo Ramos</a></li>
+									<li><a class="dropdown-item" href="https://github.com/mateusbdias" target="_blank">Mateus B. Dias</a></li>
+									<li><a class="dropdown-item" href="https://github.com/ronaldofjr" target="_blank">Ronaldo F. Junior</a></li>
+									<li><a class="dropdown-item" href="https://github.com/buenodark" target="_blank">Wesley B. M. Alves</a></li>
 								</ul>
 							</li>
 							<!-- <li class="nav-item dropdown">
@@ -136,7 +136,7 @@
 		<div class="fakeLoader"></div>
 
 		<div class="modal fade" id="cadastro" tabindex="-1" aria-labelledby="cadastro" aria-hidden="true">
-			<div class="modal-dialog" style="max-width: 80%">
+			<div class="modal-dialog" style="max-width: 70%">
 				<div class="modal-content">
 					<div class="modal-body">
 						<div class="col-lg-12 col-xl-11">
@@ -189,7 +189,7 @@
 										</form>
 									</div>
 									<div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-										<img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-registration/draw1.png" class="img-fluid" alt="Sample image" />
+										<img src="./img/GeekflixMaior.fw.png" class="img-fluid" alt="Logo Geekflix" />
 									</div>
 								</div>
 							</div>
@@ -225,7 +225,7 @@
 
 				$.fakeLoader({
 					timeToHide: 1800,
-					bgColor: '#3498db',
+					bgColor: '#7f0000',
 					spinner: 'spinner4',
 				});
 			});
