--- a/coringa.html
+++ b/coringa.html
@@ -3,7 +3,7 @@
 	<iframe
 		width="560"
 		height="315"
-		src="https://www.youtube.com/watch?v=jfVTJm9NilA"
+		src="https://www.youtube.com/embed/jfVTJm9NilA"
 		title="YouTube video player"
 		frameborder="0"
 		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
