--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="sticky-top">
 			<nav class="navbar navbar-expand-sm navbar-dark bg-light" aria-label="Third navbar example">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#"> <img src="./img/Geekflix.fw.png" alt="Logo da Geekflix" class="logo img-fluid mx-4" /></a>
@@ -42,7 +42,7 @@
 								<a class="nav-link active text-dark px-4" data-bs-toggle="modal" data-bs-target="#cadastro" style="cursor: pointer">Cadastro</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active text-dark px-4 brinde" style="cursor: pointer">Ganhar um Brinde</a>
+								<a class="nav-link active text-dark px-4 bg-danger brinde" style="cursor: pointer">Ganhar um Brinde</a>
 							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-dark px-4" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Participantes</a>
